# ROS-Gstream-Live-Video-downsizer-and-transmitter

./: CMakeLists.txt  README.md  package.xml  ros_vid_trans.cpp
